Implement Redis integration for AI project data caching and add health checks in Docker configuration